Bug 487149 - web inspector in falkon does not restor selected theme
Summary: web inspector in falkon does not restor selected theme
Status: RESOLVED FIXED
Alias: None
Product: Falkon
Classification: Applications
Component: general (other bugs)
Version First Reported In: 24.02.2
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: Unassigned bugs
URL:
Keywords:
: 497333 (view as bug list)
Depends on:
Blocks:
 
Reported: 2024-05-17 15:33 UTC by Eugene Shalygin
Modified: 2025-09-05 16:28 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 25.12.0
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Eugene Shalygin 2024-05-17 15:33:02 UTC
Setting theme to "Dark" in the web inspector preferences does not persist between Falkon launches. Also, In KDE "System preference" ignores dark Plasma theme.


STEPS TO REPRODUCE
1.  Open Web Inspector
2.  Select dark theme
3. Close Falkon
4. Launch Falkon
5. Open Web Inspector

OBSERVED RESULT
The theme is light

EXPECTED RESULT
The theme is dark

SOFTWARE/OS VERSIONS

Operating System: Gentoo Linux 2.15
KDE Plasma Version: 6.0.4
KDE Frameworks Version: 6.2.0
Qt Version: 6.7.0
Kernel Version: 6.9.0-gentoo (64-bit)
Graphics Platform: Wayland
Graphics Processor: AMD Radeon Graphics
Comment 1 Juraj 2024-06-13 22:21:17 UTC
Can confirm.

But it is much worse, any change configuration in WebInspector does not persist through program restarts.
Comment 2 Juraj 2024-12-11 18:11:58 UTC
*** Bug 497333 has been marked as a duplicate of this bug. ***
Comment 3 Juraj 2025-09-05 16:28:02 UTC
Git commit bd5f0c488df2349402e4d079fb94e5918d2edde3 by Juraj Oravec.
Committed on 05/09/2025 at 16:17.
Pushed by jurajo into branch 'master'.

Fix loading and storing settings in WebInspector

The QWebEngineView/Page needs to have specified profile in order to
store settings in it, otherwise the defaulr ptofile is used which will
keep settings only while program is running.

This was discovered by OtterBrowser developer and forwarded to me by
Chiitooi over IRC.
FIXED-IN: 25.12.0

Signed-off-by: Juraj Oravec <jurajoravec@mailo.com>

M  +1    -1    src/lib/popupwindow/popupwebview.cpp
M  +9    -1    src/lib/webengine/webinspector.cpp
M  +2    -0    src/lib/webengine/webinspector.h
M  +1    -1    src/lib/webtab/webtab.cpp
M  +1    -0    src/plugins/PyFalkon/pyfalkon_global.h

https://invent.kde.org/network/falkon/-/commit/bd5f0c488df2349402e4d079fb94e5918d2edde3