Fix loading and storing settings in WebInspector

The QWebEngineView/Page needs to have specified profile in order to
store settings in it, otherwise the defaulr ptofile is used which will
keep settings only while program is running.

This was discovered by OtterBrowser developer and forwarded to me by
Chiitooi over IRC.

BUG: 487149
FIXED-IN: 25.12.0

Signed-off-by: Juraj Oravec <jurajoravec@mailo.com>